force-app/main/default/objects/Airport__c/fields/Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Airport_Code__c</fullName>
    <label>Airport Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>