force-app/main/default/objects/Airport__c/fields/Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Country_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Id</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Airports</relationshipLabel>
    <relationshipName>Airports</relationshipName>
    <type>Lookup</type>
</CustomField>