force-app/main/default/objects/Airport__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Location_Id__r.Location_Code__c + &apos;-&apos; +  Airport_Name__c  + &apos; (&apos; +  Location_Id__r.City__c  + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>