force-app/main/default/objects/Airport__c/fields/Flight_Type__c.field-meta.xml
<CustomField>
    <fullName>Flight_Type__c</fullName>
    <label>Flight Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flight_Type</valueSetName>
    </valueSet>
</CustomField>