force-app/main/default/objects/Airport__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Id</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Airports</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>