force-app/main/default/objects/Airport__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector</label>
    <referenceTo>Sector__c</referenceTo>
    <relationshipLabel>Airports</relationshipLabel>
    <relationshipName>Airports</relationshipName>
    <type>Lookup</type>
</CustomField>