force-app/main/default/objects/Airport__c/fields/Service_Available__c.field-meta.xml
<CustomField>
    <fullName>Service_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Available</label>
    <type>Checkbox</type>
</CustomField>