force-app/main/default/objects/Airport__c/fields/State_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Id</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Airports</relationshipLabel>
    <relationshipName>Airports</relationshipName>
    <type>Lookup</type>
</CustomField>